updating k8s files for autoscaling

--- a/infrastructure/kubernetes/consumer-deployment.yaml
+++ b/infrastructure/kubernetes/consumer-deployment.yaml
@@ -4,9 +4,10 @@ metadata:
   name: consumer-config
   namespace: default
 data:
-  KAFKA_TOPIC: "video-frames"
-  INFERENCE_URL: "http://inference-service:8000"
-  AWS_REGION: "ap-south-1"
+  KAFKA_TOPIC: "<KAFKA_TOPIC>"
+  KAFKA_CONSUMER_GROUP: "<KAFKA_CONSUMER_GROUP>"
+  INFERENCE_URL: "<INFERENCE_URL>"
+  AWS_REGION: "<AWS_REGION>"
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -26,15 +27,15 @@ spec:
       serviceAccountName: consumer-sa
       containers:
         - name: consumer
-          image: 206617159102.dkr.ecr.ap-south-1.amazonaws.com/consumer-service:latest
+          image: <ECR_REGISTRY>/consumer-service:latest
           envFrom:
             - configMapRef:
                 name: consumer-config
           env:
             - name: KAFKA_BOOTSTRAP
-              value: "b-1.optifyeclusterkafka.s585he.c2.kafka.ap-south-1.amazonaws.com:9094,b-2.optifyeclusterkafka.s585he.c2.kafka.ap-south-1.amazonaws.com:9094"
+              value: "<MSK_BOOTSTRAP_SERVERS>"
             - name: S3_BUCKET
-              value: "optifye-cluster-inference-results-32bbe989"
+              value: "<S3_BUCKET_NAME>"
           resources:
             requests:
               memory: "512Mi"
@@ -45,18 +46,18 @@ spec:
           livenessProbe:
             exec:
               command:
-              - sh
-              - -c
-              - pgrep -f consumer.py || exit 1
+                - sh
+                - -c
+                - pgrep -f consumer.py || exit 1
             initialDelaySeconds: 60
             periodSeconds: 30
             timeoutSeconds: 5
           readinessProbe:
             exec:
               command:
-              - sh
-              - -c
-              - 'curl -f http://localhost:8000/health || exit 1'
+                - sh
+                - -c
+                - pgrep -f consumer.py || exit 1
             initialDelaySeconds: 30
             periodSeconds: 10
 
@@ -67,24 +68,4 @@ metadata:
   name: consumer-sa
   namespace: default
   annotations:
-    eks.amazonaws.com/role-arn: arn:aws:iam::206617159102:role/optifye-cluster-consumer-s3-access
-
-# ---
-# apiVersion: autoscaling/v2
-# kind: HorizontalPodAutoscaler
-# metadata:
-#   name: consumer-service-hpa
-# spec:
-#   scaleTargetRef:
-#     apiVersion: apps/v1
-#     kind: Deployment
-#     name: consumer-service
-#   minReplicas: 2
-#   maxReplicas: 10
-#   metrics:
-#   - type: Resource
-#     resource:
-#       name: cpu
-#       target:
-#         type: Utilization
-#         averageUtilization: 70
+    eks.amazonaws.com/role-arn: <IAM_ROLE_ARN>
