--- a/infrastructure/kubernetes/inference-deployment-final.yaml
+++ b/infrastructure/kubernetes/inference-deployment-final.yaml
@@ -4,7 +4,7 @@ metadata:
   name: inference-service
   namespace: default
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: inference-service
@@ -19,10 +19,11 @@ spec:
           ports:
             - containerPort: 8000
               name: http
+          # Sized to fit 2 inference pods + consumer + publisher on one t3.medium (2 vCPU, 4 GiB)
           resources:
             requests:
               memory: "1Gi"
-              cpu: "500m"
+              cpu: "400m"
             limits:
               memory: "2Gi"
               cpu: "1000m"
@@ -65,4 +66,7 @@ spec:
       port: 8000
       targetPort: 8000
   type: ClusterIP
+
+# Scaling for inference-service is done by KEDA (keda-inference-scaledobject.yaml)
+# when that manifest is applied. Do not add an HPA here or the ScaledObject will be rejected.
 
