--- a/infrastructure/kubernetes/consumer-deployment-final.yaml
+++ b/infrastructure/kubernetes/consumer-deployment-final.yaml
@@ -42,6 +42,24 @@ spec:
             limits:
               memory: "1Gi"
               cpu: "500m"
+          livenessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - pgrep -f consumer.py || exit 1
+            initialDelaySeconds: 60
+            periodSeconds: 30
+            timeoutSeconds: 5
+          readinessProbe:
+            exec:
+              command:
+                - sh
+                - -c
+                - pgrep -f consumer.py || exit 1
+            initialDelaySeconds: 30
+            periodSeconds: 10
+
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -50,3 +68,4 @@ metadata:
   namespace: default
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::206617159102:role/optifye-cluster-consumer-s3-access
+
