--- a/services/inference-service/Dockerfile
+++ b/services/inference-service/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Install system dependencies for OpenCV and ONNX
 RUN apt-get update && apt-get install -y \
     libgl1 \
     libglib2.0-0 \
@@ -9,12 +10,12 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Add onnxruntime to your requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt onnxruntime
 
-ENV TORCH_FORCE_WEIGHTS_ONLY_LOAD=0
-
-# Now this will succeed during build
-RUN python3 -c "from ultralytics import YOLO; YOLO('yolov8n.pt')"
+# Export the model to ONNX format during build
+# This avoids all PyTorch 2.6+ "Weights only load failed" errors
+RUN python3 -c "from ultralytics import YOLO; model = YOLO('yolo26n.pt'); model.export(format='onnx')"
 
 COPY app.py .
 
@@ -23,5 +24,5 @@ EXPOSE 8000
 # Add non-root user
 RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
 USER appuser
-# Reduce workers to 1 (YOLO CPU is single-threaded bottleneck)
+
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
