updating version for eks-- cost heavy suuport optimized

--- a/services/inference-service/Dockerfile
+++ b/services/inference-service/Dockerfile
@@ -11,11 +11,18 @@ RUN apt-get update && apt-get install -y \
 
 COPY requirements.txt .
 # Add onnxruntime to your requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt onnxruntime
+RUN pip install --no-cache-dir -r requirements.txt onnxruntime onnxscript
 
 # Export the model to ONNX format during build
 # This avoids all PyTorch 2.6+ "Weights only load failed" errors
-RUN python3 -c "from ultralytics import YOLO; model = YOLO('yolov8n.pt'); model.export(format='onnx')"
+RUN python3 -c "\
+import torch; \
+# Monkey-patch torch.load to revert to pre-2.6 behavior \
+orig_load = torch.load; \
+torch.load = lambda *args, **kwargs: orig_load(*args, **kwargs, weights_only=False); \
+from ultralytics import YOLO; \
+model = YOLO('yolov8n.pt'); \
+model.export(format='onnx')"
 
 COPY app.py .
 
